[gd_scene load_steps=7 format=2]

[ext_resource path="res://src/ui/ChangeSceneButton.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/sounds/menu_song.wav" type="AudioStream" id=2]
[ext_resource path="res://src/ui/Menu.gd" type="Script" id=3]
[ext_resource path="res://assets/sounds/hurt.wav" type="AudioStream" id=4]
[ext_resource path="res://src/ui/theme_font.tres" type="Theme" id=5]
[ext_resource path="res://assets/objects/menu_background.png" type="Texture" id=6]

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 5 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -64.5746
margin_right = 20.0
margin_bottom = -24.5746
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Play" parent="VBoxContainer" instance=ExtResource( 1 )]
margin_right = 48.0
margin_bottom = 40.0
next_scene_path = "res://src/levels/level_1.tscn"

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -18.5152
margin_right = 20.0
margin_bottom = 45.4848
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer2"]
margin_right = 54.0
margin_bottom = 10.0
text = "music"
align = 1

[node name="musicBar" type="HScrollBar" parent="VBoxContainer2"]
margin_top = 14.0
margin_right = 54.0
margin_bottom = 26.0
min_value = -30.0
max_value = 10.0
value = -10.0

[node name="Label2" type="Label" parent="VBoxContainer2"]
margin_top = 30.0
margin_right = 54.0
margin_bottom = 40.0
text = "sounds"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="soundBar" type="HScrollBar" parent="VBoxContainer2"]
margin_top = 44.0
margin_right = 54.0
margin_bottom = 56.0
min_value = -30.0
max_value = 10.0
value = -10.0

[node name="Menu_music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = -10.0
autoplay = true

[node name="Sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -10.0

[node name="Label" type="Label" parent="."]
anchor_right = 1.0
margin_left = -0.749153
margin_top = 7.11696
margin_right = -0.749146
margin_bottom = 17.117
text = "BUG HORDE"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
